correction of href and change content

--- a/style/index.css
+++ b/style/index.css
@@ -79,6 +79,13 @@ p{
 .raw{
     width: 31px;
 }
+.text{
+  text-align: justify ;
+}
+.text:after {
+  content: "";
+  display: inline-block;
+}
 @media (max-width:914px) {
     .carousel__item.active{
         flex-direction: column;
