--- a/style/navbar.css
+++ b/style/navbar.css
@@ -160,16 +160,16 @@ li {
 .button{
     display: flex;
     align-items: center;
-    background-color: rgba(250, 235, 215, 0.289);
+    background-color: transparent;
     transition: all 1s;
     margin: 0px 3% 0px 0px;
-    border-radius: -15px;
+    border-radius: 0px;
     box-shadow: inset 0 0 0 0 #4057ef;
-    /* transition: ease-out 1s, border 0.4s; */
+    transition: border-radius 2s, box-shadow .5s;
 }
 .button:hover{
-    /* transition: ease-out 1s, border 0.5s; */
-    border-radius: 15px;
+    transition: box-shadow 1s;
+    border-radius: 50px;
     box-shadow: inset 400px 0 0 0 #4057ef;
 
 }
@@ -192,15 +192,15 @@ li {
 }
 
 /*HAMBURGER MENU*/     
-
-    
-    /* APPLYING MEDIA QUERIES */
     
 @media (max-width: 965px)  {
     .button{
         display: none;
     }
     .button-c{
+        display: none;
+    }
+    .button-icon{
         display: none;
     }
     .menu {
@@ -248,13 +248,15 @@ li {
         background-color: rgba(247, 247, 247, 0.589);;
     }
 }
-/* navbar END */
 @media (max-width: 500px){
     .button{
-        display: none;
+        display: none !important;
         all : unset;
     }
     .button-c{
+        display: none;
+    }
+    .button-icon{
         display: none;
     }
     .hum:checked .navbar {
@@ -278,3 +280,4 @@ li {
         display:none;
     }
 }
+/* navbar END */
