--- a/style/navbar.css
+++ b/style/navbar.css
@@ -49,7 +49,7 @@ body{
     background-color: #31034e;
     padding: 0;
     margin:0;
-    font-family: "Open Sans", sans-serif;
+    font-family: arial;
 }
 .logo2{
     display: none;
