--- a/style/footer.css
+++ b/style/footer.css
@@ -202,7 +202,7 @@
         justify-content: center;
     }
     .footer-logo{
-        padding: 0;
-        margin: 0 25%;
+        padding: 10px 0px;
+        margin: 0px 25%;
     }
 }
