--- a/style/index.css
+++ b/style/index.css
@@ -349,13 +349,13 @@ p{
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #264fe5de;
+  background-color: #4c3abb;
   transition: all 1s;
 }
 .card:hover{
   transition: all 0.5s;
   height: 260px;
-  background-color: #3378f7;
+  background-color: #6d5ed0;
   box-shadow: 0px 0px 45px 6px rgba(0, 0, 0, 0.6);
 -webkit-box-shadow: 0px 0px 45px 6px rgba(0,0,0,0.6);
 -moz-box-shadow: 0px 0px 45px 6px rgba(0,0,0,0.6);
@@ -374,13 +374,14 @@ p{
   margin: 0px auto;
 }
 .card_title{
+  color: white;
   transition: all 1s;
   margin: 0px auto;
 }
 .card_text{
   text-align: center;
   display: none;
-  color: rgb(3 26 140);
+  color: white;
   margin: -19px auto;
 }
 .container{
@@ -565,7 +566,7 @@ color: white;
     }
     .card{
       width: 215px;
-      height: 225px;
+      height: 250px;
     }
     
 }
@@ -577,7 +578,7 @@ color: white;
     display: unset;
   }
   .card:hover{
-    height: 225px;
+    height: 250px;
     background-color: #264fe5de;
     box-shadow: unset;
     -webkit-box-shadow: unset;
